model updates - null, full, reduced, trans

--- a/insurance.Rmd
+++ b/insurance.Rmd
@@ -1,5 +1,6 @@
 ---
 title: "Insurance Classification and Prediction"
+author: "Sean Connin"
 output:
   html_document: 
     toc: true
@@ -19,9 +20,6 @@ output:
 
 knitr::opts_chunk$set(echo = TRUE, warning=FALSE, message = FALSE)
 
-# read in data
-
-raw <- read_csv('insurance_training_data.csv')
 ```
 ### Project Description
 
@@ -59,150 +57,177 @@ The data include the following variables:
 | YOJ                  | Years on job                                 |
 
 
-```{r echo = FALSE, message = FALSE}
+```{r}
+
 library(tidyverse)
 library(janitor)
 library(magrittr)
 library(flextable)
 library(dlookr) # eda
+library(mice)
 library(ggpubr) # creates a wrapper for plotting a list
 library(viridis)
 library(broom) # creates a tidy data frame from statistical test results
-library(car) # VIF
-library(lmtest) #partial likelihood test for model fit comparisons
+#library(pscl)
+
+library(InformationValue) # optimize threshold
+library(MASS) #partial likelihood test for model fit comparisons
 library(caret) # conf matrix
-library(car) # marginal model plot
-library(pROC) #roc curve
+library(ROCR) #roc curve
+library(corrplot)
+library(car)
+#library(logistf)
 ```
-
-Import the dataset
-
-Findngs and Response: 
-
-1. There are no duplicate rows to worry about here.
-
 
 ```{r}
 
+# read in data
 
-# initial clean of col names
+path <- "https://raw.githubusercontent.com/sconnin/insurance_model/main/insurance_dataset.csv"
 
-raw%<>%clean_names
+raw <- read_csv(path)
 
-# remove any empty rows and cols
+```
 
-raw%<>%remove_empty(c("rows", "cols"))
 
-# assess presence of duplicates
+### Data Preparation
 
-get_dupes(raw)
+The step includes:
 
-# basic characterization
+* creating a copy dataframe (df)
+* basic cleaning operations
+* conversion of variables to numeric type as appropriate
+* conversion of character variables to factor in preparation for modeling
+* releveling of select factor variables
+* removal of any empty rows/cols or duplicate rows 
+* removal of the index column for simplicity
 
-str(raw)
+Review of the dataframe structure confirms these changes
 
-#clean extraneous symbols from char col values and convert to numeric as appropriate
+```{r}
 
 df<-raw%>%
-    mutate_if(is_character, str_replace_all, '\\$|,|z_|<', '')%>%
-    mutate_at(c(8,10,17,21), as.numeric)%>%
-    mutate_at(c(2), as.factor)
-
-# round numeric columns
-
-df%<>%mutate_if(is.numeric, round)
-
-# identify unique values in our character cols
-
-id_distinct <- df%>%
-    select(where(is_character))%>%
-    map(~str_c(unique(.x),collapse = ",")) %>% 
-    bind_rows() %>% 
-    gather(key = col_name, value = col_unique)
-
-# Update col values for clarity and brevity
-
-df%<>%
-    mutate_if(is_character, str_replace_all, "No|no",'N')%>%
-    mutate_if(is_character, str_replace_all, "Yes|yes",'Y')%>%
-    mutate_if(is_character, str_replace_all, "Highly Urban/ Urban",'Urban')%>%
-    mutate_if(is_character, str_replace_all, "Highly Rural/ Rural",'Rural')
-
-# convert character cols to factor and set level for education col
-
-df %<>%mutate_if(is_character, ~(factor(.)))
-
-df$education<-factor(df$education, levels=c("High School", "Bachelors", "Masters", "PhD"))
-  
-str(df)
-```
-Assess missing data - dlookr package
-
-Recommend: impute missing numerical data 
-
-```{r fig.height = 8, fig.width = 15}
-
-#basic missing table
     
-df%>%
-    diagnose()%>%
-    select(-unique_count, -unique_rate)%>%
-    filter(missing_count>0)%>%
-    arrange(desc(missing_count))%>%
-    flextable()
+    clean_names%>% # initial clean of col names
+    
+    remove_empty(c("rows", "cols"))%>%  # remove any empty rows and cols
+    
+    distinct()%>%     # remove duplicate rows
+    
+    mutate_if(is_character, str_replace_all, '\\$|,|z_|<', '')%>%  # clean any special chars in character variables
 
-# missing plots 
+    dplyr::select(-index)%>%  # remove index
 
-df%>%plot_na_pareto(only_na = TRUE) # only plots vars with missing
-df%>%plot_na_intersect(only_na = TRUE)
+    mutate_if(is_character, str_replace_all, "No|no",'N')%>%  
+    
+    mutate_if(is_character, str_replace_all, "Yes|yes",'Y')%>%
+    
+    mutate_if(is_character, str_replace_all, "Highly Urban/ Urban",'Urban')%>%
+    
+    mutate_if(is_character, str_replace_all, "Highly Rural/ Rural",'Rural')%>%
+    
+    mutate_at(vars(income, home_val, bluebook, oldclaim), funs(as.numeric))%>%   # correct variable type: char to numeric
+
+    mutate_if(is.numeric, round)%>%  # round out our numerics
+    
+    mutate_if(is_character, ~(factor(.)))%>%  # convert all character variables to factor for modeling
+    
+    mutate(education = fct_relevel(education, c("High School", "Bachelors", "Masters", "PhD")))%>% # relevel to show educational attainment steps
+    
+    mutate(car_type = fct_relevel(car_type, c("Sports Car", "SUV", "Minivan, Van", "Pickup", "Panel Truck")))
+
+str(df) # review structure of data set
 
 ```
-Assess other data characteristics - tables
 
-Findings:
+### Variable distributions and frequency
 
-Skewed Data - target_amt, kidsdriv, homekids, oldclaim, clm_freq, mvr_pts, yoj, income
+Recall that the variable target_flag indicates whether or not an automobile was in an
+accident (0 = No, 1 = Yes).
 
-Percent Outliers (>5%) - target_amt, kidsdriv, homekids, oldclaim, yoj
+* target_flag (level = 0) includes 6008 observations and accounts for ~74% of the data.
 
-Errors (neg vals) - car_age (1 obs)
+* target_flag (level = 1) includes 2153 observations and accounts for ~26% of the data. 
 
-Recommend:
-
-- convert neg value in car_age to NA
-
-Possible transformations
-
-- travtime (sqrt), bluebook(sqrt), old-claim(log), homeval(log), income(sqrt)
+Note that while the levels are unbalanced, the relative frequency of target_flag = 1
+is well above that indicative of a rare event. 
 
 ```{r}
-#identify highly skewed data
 
-df%>%find_skewness(index=FALSE, thres=TRUE) #this is good
+# subset levels of target_flag into new dataframes for analyses
 
-#identify outliers
+target_0 <- df%>%
+    dplyr::select(-target_amt)%>%
+    filter(target_flag == 0) # obs not associated with automobile accidents
 
-df%>%find_outliers(index=FALSE, rate=TRUE) # this is good
+target_1 <- df%>%
+    dplyr::select(-target_amt)%>%
+    filter(target_flag == 1)  # obs associated with automobile accidents
 
-# assess normality - Shapiro Wilke
+# calculate the proportion of data in each subset of target_flag
 
-df%>%normality()
+df %>%
+    group_by(target_flag) %>%
+    summarise(n = n()) %>%
+    mutate(freq = n / sum(n))%>%
+    flextable()
 
-df%>%plot_normality()	
-
-# other diagnostics
-
-df%>%
-    diagnose_numeric()%>%
-    select(variables, min, mean, median, max, zero, minus)%>%
-    flextable(theme_fun = theme_booktabs())
-
-df%>%
-    diagnose_category()%>%
-    flextable(theme_fun = theme_booktabs())
 ```
 
-Correct obvious data errors
+
+There is one negative value (-3) for car_age that should be investigated.This may be 
+a data entry error.
+
+
+
+```{r}
+
+# calculate basic univariate summaries (numeric variables) for each subset of target_flag    
+
+target_0%>%
+    dplyr::select(-target_flag)%>%
+    diagnose_numeric()%>%
+    dplyr::select(variables, min, mean, median, max, zero, minus, outlier)%>%
+    flextable()%>%
+    set_caption("Summary Statistics for Target_Flag = 0")
+
+target_1%>%
+    dplyr::select(-target_flag)%>%
+    diagnose_numeric()%>%
+    dplyr::select(variables, min, mean, median, max, zero, minus, outlier)%>%
+    flextable()%>%
+    set_caption("Summary Statistics for Target_Flag = 1")
+
+#calculate percentage of zero values in numerical covariates for each level of target_flag
+
+select_col<- as_mapper(~all(is.na(.)|.< 1)) # purrr mapper for possible downstream use
+
+# note target_flag must be numerical type for the following to run
+
+df%>%
+    group_by(target_flag)%>%
+    dplyr::select(where(is.numeric) & -target_amt)%>%
+    summarise_each(~round(sum(.==0)/length(.)*100))%>%
+    purrr::discard(select_col)%>%
+    flextable()%>%
+    set_caption("Percentage of Zeros in Covariates by Level of Target_Flag")
+
+# calculate basic univariate summaries (categorical variables) for each subset of target_flag 
+
+target_0%>%
+    diagnose_category()%>%
+    flextable(theme_fun = theme_booktabs())
+
+target_1%>%
+    diagnose_category()%>%
+    flextable(theme_fun = theme_booktabs())
+
+
+
+
+
+```
+Correct obvious data entry error in working dataframe
 
 ```{r}
 
@@ -211,27 +236,101 @@ df$car_age[df$car_age < 0] <- NA
 
 ```
 
-Pairwise comparisons
 
-Findings:
+Assess skewness and normality
 
-1. Only income and homeval corr at >0.5 or <-0.5
+skewed data - target_flag, kidsdriv, homekids, yoj, income, oldclaim, clm_freq, 
+mvr_pts"
 
-```{r fig.height=20, fig.width+20}
 
-#assess covariance 
+```{r}
+
+# evaluate and rank departures from normality for numerical vars
+
+df %>%
+    as.data.frame()%>%
+    dplyr::select(-target_amt, target_flag)%>%
+    normality() %>%
+    filter(p_value <= 0.01) %>%
+    arrange(abs(p_value))
+
+#identify skewness in covariates across levels of target_flag
+
+target_0%>%find_skewness(index=FALSE, thres=TRUE) 
+target_1%>%find_skewness(index=FALSE, thres=TRUE)
+
+# identify potential transformations to address skew, this does not resolve high 0 counts
 
 df%>%
-   # select(!index)%>%
-    correlate()%>%
-    filter(coef_corr > .4 | coef_corr < -.4)
+    dplyr::select(age, yoj, income, home_val, travtime, bluebook, tif, oldclaim, car_age)%>%
+    plot_normality()
 
-df%>%plot_correlate()  
 ```
 
+Evaluate outliers
+
+percentage of outliers > 5%: kidsdriv, homekids, yoj 
+
+```{r}
+
+# identify percentage of outliers for each covariate across levels of target_flag
+# calc ratio_means = mean val of outliers/total mean    
+
+diagnose_outlier(target_0) %>%
+    filter(outliers_ratio > 5)%>%
+    mutate(ratio_means= outliers_mean/with_mean)%>%
+    arrange(desc(ratio_means))%>%
+    dplyr::select(variables, outliers_ratio, ratio_means)%>%
+    flextable()%>%
+    set_caption("Outlier Summary: Target_Flag = 0")
+
+diagnose_outlier(target_1) %>%
+    filter(outliers_ratio > 5)%>%
+    mutate(ratio_means= outliers_mean/with_mean)%>%
+    arrange(desc(ratio_means))%>%
+    dplyr::select(variables, outliers_ratio, ratio_means)%>%
+    flextable()%>%
+    set_caption("Outlier Summary: Target_Flag = 1")
+```
+
+**Missing values**
+
+Our dataset includes missing observations in one categorical variable (job) and six
+numerical variables (car_age, home-val, yoj, income, age). Across the variables the
+extent of missingness is < 6.5% of the total observations. Before making adjustments to
+address missingness, it may be helpful to assess collinearity among the covariates. 
+
+
+```{r }
+
+#basic missing table
+    
+target_0%>%
+    diagnose()%>%
+    dplyr::select(-unique_count, -unique_rate)%>%
+    filter(missing_count>0)%>%
+    arrange(desc(missing_count))%>%
+    flextable()
+
+target_1%>%
+    diagnose()%>%
+    dplyr::select(-unique_count, -unique_rate)%>%
+    filter(missing_count>0)%>%
+    arrange(desc(missing_count))%>%
+    flextable()
+
+# plot missing data to visualize cumulative percentages and col intersections
+
+df %>% 
+  plot_na_pareto(only_na = TRUE)
+
+df%>%
+    plot_na_intersect()  
+
+```
 Impute numerical values 
 
-NOte: imputation method determined through iterative trials
+Note: imputation method determined through iterative trials
 
 ```{r}
 
@@ -283,16 +382,13 @@ summary(age)
 temp<-cbind(car_age, home_val, yoj, income, age)
 temp%<>%as.data.frame(temp)
 
-df%<>%select(!c(car_age, home_val, yoj, income, age))%>%
+df%<>%dplyr::select(!c(car_age, home_val, yoj, income, age))%>%
     cbind(temp)
 
 df%<>%mutate_if(is.numeric, round)
 
-#write.csv(df, 'C://Users//seanc//Documents//Data_Science//CUNY//621_BusinessAnalytics//insurance_model//df_clean.csv', row.names=FALSE)
-
-
-
 ```
+
 Impute Categorical Variables - job
 
 ```{r}
@@ -304,109 +400,118 @@ plot(job)+theme_minimal()+theme(legend.position = "top")
 
 # combine into new dfb
 
-df<-df%>%select(!job)
+df<-df%>%
+    dplyr::select(!job)
+
 df<-cbind(df,job)
+
 df$job<-factor(df$job)
 
 ```
 Save csv with imputed values 
 
 ```{r}
-#write.csv(df, 'C://Users//seanc//Documents//Data_Science//CUNY//621_BusinessAnalytics//insurance_model//df_clean_imputed.csv', row.names=FALSE)
+
+df%<>%mutate_at(vars(target_flag), funs(factor)) # convert target_flag to factor
+
+write.csv(df, 'df_clean.csv', row.names=FALSE)
+
 ```
 
+**Assess Colinearity: Pairwise Comparisons**
 
-Assess Outliers
+Pairwise comparisons provide a method to identify collinear relationships between
+covariates. Variables that display high collinearity (e.g., <> .50) may be redundant 
+for modeling purposes (i.e., the total variance explained by each variable).
 
-Findings:
+To refine the analyses, pairwise comparisons are assessed independently for the 
+two levels of the target variable. 
 
-1. Outliers (>5%) - target_amt, kidsdriv, homekids, oldclaim, yoj
+Results:
 
-2. High Zero Freq - target_amt, kidsdriv, homekids, oldclaim, mvr_pts, car_age, 
-    home_val (why?)
+* There are no pairwise correlations beyond the threshold (-.50, .50) for the target_flag = 1 subset
+* home_value and income have a positive coeff. of correlation of ~ 0.59
+* clm_freq and oldclaim have a positive coeff. of correlation of ~ 0.52
 
-Recommend: 
+Both home_value and income have similar levels of missing data. An argument can be
+made for dropping either home-value or income from the dataset in order to simplify 
+the feature selection process. This is also true for clm_freq and oldclaim, although
+less clear cut. 
 
-- create  2-level factor for kids_drive, home_kids
-- create 2 or 3 -level factor for tiff(?)
-- respond to zero inflation for target_age, old_claim and car age (?)
 
 ```{r}
-diagnose_outlier(df) %>% flextable()
 
-df %>% 
-    select(find_outliers(df, index = FALSE)) %>% 
-    plot_outlier()
-```
+#assess covariance in the absence of zero values in numerical cols
 
+df%>%
+    filter_if(is.numeric, all_vars((.) != 0))%>%
+    correlate()%>%
+    filter(coef_corr > .5 | coef_corr < -.5)%>% # set thresholds to limit output 
+    flextable()
 
-# Review categorical vars in relation to target
+# plot relationship between numerical covariates (w/o zero values for clarity) beyond the threshold coef_corr 
 
-Findings:
+df %>%
+    filter(income != 0 & home_val != 0)%>% 
+    target_by(income) %>%
+    relate(home_val) %>%
+    plot()
+    
 
-1. Obv. Patterns - parent1, mstatus, education, job, car use, car type, revoked, urbanicity
-
-```{r fig.height=5, fig.width=8}
-
-df %>% 
-  target_by(target_flag) %>%
-    relate(parent1) %>%
+df %>%
+    filter(clm_freq != 0 & oldclaim != 0)%>%
+    target_by(clm_freq) %>%
+    relate(oldclaim) %>%
     plot()
 
-df %>% 
-  target_by(target_flag) %>%      
-  relate(mstatus) %>% 
-  plot()
+df %>%
+    filter(home_val != 0 & car_age != 0)%>%
+    target_by(home_val) %>%
+    relate(car_age) %>%
+    plot()
+
+# plot relationship between numerical and factors for select vars
 
 df %>% 
-  target_by(target_flag) %>%      
-  relate(sex) %>% 
-  plot()
-
-df %>% 
-  target_by(target_flag) %>%      
-  relate(education) %>%
-  plot()
-  
-
-df %>% 
-  target_by(target_flag) %>%      
+  target_by(income) %>%      
   relate(job) %>% 
   plot()
 
-df %>% 
-  target_by(target_flag) %>%      
-  relate(car_use) %>% 
-  plot()
-
-df %>% 
-  target_by(target_flag) %>%      
-  relate(car_type) %>% 
-  plot()
-
-df %>% 
-  target_by(target_flag) %>%      
-  relate(red_car) %>% 
-  plot()
-
-df %>% 
-  target_by(target_flag) %>%      
-  relate(revoked) %>% 
-  plot()
-
-df %>% 
-  target_by(target_flag) %>%      
-  relate(urbanicity) %>% 
-  plot()
-
-
+df%>%kruskal.test(income~job) # assess covariance with Kruskal-Wallis rank sum test where > 1 categorical level
 
 ```
-Plot numerical variables
 
-```{r fig.height=15, fig.width=25}
+# Review categorical vars in relation to target
 
-num_box<-select_if(df, is.numeric)
+Note: target_flag needs to be a factor var for mosaic plotting
+
+Note: use all_of to avoid ambiguity in selecting external vector - https://tidyselect.r-lib.org/reference/faq-external-vector.html
+
+Findings:
+
+```{r }
+
+df_factor<-df%>%
+    dplyr::select(where(is.factor))
+
+target <- all_of(names(df_factor)[1]) # set name for target_flag
+covariates <- all_of(names(df_factor)[2:11]) # set names for factor covariates
+
+#create mosaic plots
+
+
+(plots<-covariates%>%map(function(covariates) df%>%target_by(target)%>%relate(covariates)%>%plot()))
+
+```
+# Review numerical vars in relation to target
+
+```{r}
+
+str(df)
+
+num_box<-select_if(df, is.numeric)%>%
+    dplyr::select(-target_amt)
+
 num_box<-cbind(df$target_flag, num_box)%>%
     rename(target_flag = 'df$target_flag')
 
@@ -414,7 +519,7 @@ num_box<-cbind(df$target_flag, num_box)%>%
 response = names(num_box)[1] #target_flag
 response = purrr::set_names(response)
 
-explain <- names(num_box)[3:16] #explanatory variables
+explain <- names(num_box)[2:14] #explanatory variables
 explain = purrr::set_names(explain)
 
 box_fun = function(x) {
@@ -424,155 +529,216 @@ box_fun = function(x) {
     scale_fill_viridis(discrete = TRUE, option = "E")+
     coord_flip()+
     theme_classic()
-    
 }
 
 b_plots<-map(explain, ~box_fun(.x)) #creates a list of plots
 
 ggarrange(plotlist=b_plots, height = .5, ncol = 3)
+
+
 ```
-Feature engineering - factor and levels
+Make final variable selections -> create base_df for modeling
+
 
 ```{r}
 
+base_df<-df%>%
+    dplyr::select(-home_val, -target_amt)  # variance in these fields explained by income
 
-df%<>%
-    select(!c(target_amt))
+base_df%<>%
+    mutate(job = (fct_collapse(job,
+                 not_white_collar = c("Student", "Blue Collar", "Home Maker", "Clerical", "Manager"),
+                 white_collar = c("Doctor", "Lawyer", "Professional"))))
 
-# change kidsdrive to categorical
-    
-df%<>%
-    mutate(kidsdriv = case_when(kidsdriv == 0 ~ 'N'
-         ,TRUE  ~ 'Y'))
+write.csv(base_df, 'base_df.csv', row.names=FALSE)    
+```
+Create training and test dataframes
 
-# change job into blue collar and professional levels
+```{r}
+#base_df<-read.csv('base_df.csv') # hold here to assist model dev 
 
-df%<>%
-    mutate(job = case_when(job == 'Blue Collar' ~ 'Blue Collar',
-                           job != 'Blue Collar' ~ 'Professional', 
-                           TRUE ~ as.character(NA)))
+base_df%>%count(target_flag)%>%
+    mutate(frequency = n/sum(n))%>%
+    flextable()  #0=6008, 1=2153
 
-df%<>%mutate(job = na_if(job, "NA"))
+ones <- base_df%>%
+    filter(target_flag == "1")
 
-#change chars to factors and level education
+zeros <-base_df%>%
+    filter(target_flag =="0")
 
-df %<>%mutate_if(is_character, ~(factor(.)))%>%select(!index)
+set.seed(1234)
 
-df$education<-factor(df$education, levels=c("High School", "Bachelors", "Masters", "PhD"))
+input_ones <- sample(1:nrow(ones), 0.7*nrow(ones))
+input_zeros <- sample(1:nrow(zeros), 0.7*nrow(ones))
 
+train_ones <- ones[input_ones, ]
+train_zeros <- zeros[input_zeros, ]
+
+train_df<-rbind(train_ones, train_zeros)
+
+test_ones <- ones[-input_ones,]
+test_zeros <- zeros[-input_zeros,]
+
+test_df <- rbind(test_ones, test_zeros)
+
+#check counts and frequencies of target_flag for train set and test set - helpful when comparing to confusion matrix
+
+train_df%>%count(target_flag)%>%
+    mutate(frequency = n/sum(n))%>%
+    flextable()
+
+test_df%>%count(target_flag)%>%
+    mutate(frequency = n/sum(n))%>%
+    flextable()
 
 ```
-**Model 1: Base logistic model **
 
-- based on prior work we remove red_car and age
+##Build Models##
+
+**Null Model: logistic regression**
 
 ```{r}
 
-#build model
+null<-glm(target_flag ~ 1, family = binomial, train_df)
 
-base_df<-df
-
-model1 <- glm(target_flag ~ .,family='binomial', base_df) 
-
-model1_aki<-step(model1, trace=0) # use Akiaike step, trace 0 prevents intermediate printing, rename model to preserve base
-
-summary(model1_aki)
+summary(null)
 
 ```
 
 
-***Model 1: confusion matrix, related measures, ROC curve***
+**Full Model: logistic regression**
 
 ```{r}
 
-#look at fit metrics - create parallel df for this purpose
+full<-glm(target_flag ~ ., family = binomial, train_df)
 
-model1_df<-base_df%>%
-  select(!c(sex, age, car_age, red_car)) # nonsignificant in model1
-
-model1_df$predicted<-predict(model1_aki, type='response')
-
-model1_df%<>%
-  mutate(predicted_obs = case_when(
-        predicted >= 0.5 ~ 1,
-        predicted < 0.5 ~ 0))
-
-model1_df$predicted_obs<-as.factor(model1_df$predicted_obs)
-model1_df$target_flag<-as.factor(model1_df$target_flag)
-
-#create confusion matrix
-
-(model1_cm<-confusionMatrix(data = model1_df$predicted_obs, reference = model1_df$target_flag))
-
-# related model results - drawing code from HW3
-
-(model1_metrics <- tibble(model = "Base Model: base variables",
-                  predictors = length(coef(model1_aki))-1,
-                  precision = model1_cm$byClass[5],
-                  auc = auc(roc(response = as.numeric(model1_df$target_flag),
-                                predictor = as.numeric(model1_df$predicted)))[1],  #note: using predicted (probs) vs predicted_obs (0,1)
-                  AIC = model1_aki$aic, BIC = BIC(model1_aki)))
-
-#roc curve with AUC
- 
-par(pty='s')
-
-proc<- roc(response=model1_df$target_flag, predictor=model1_df$predicted, plot=TRUE, legacy.axes=TRUE, auc.polygon=TRUE, col='blue', main = 'Model 1 ROC Curve', max.auc.polygon=TRUE, print.auc=TRUE)
+summary(full)
 
 ```
 
-***Model 1: Assess for overdispersion***
 
-- no evidence of dispersion
+**Reduced Model: logistic regression **
+
+```{r}
+
+#build reduced model
+
+
+reduced <- glm(target_flag ~ .,family='binomial', train_df) 
+
+reduced<-step(reduced, trace=0) # use Akiaike step, trace 0 prevents intermediate printing
+
+summary(reduced)
+
+```
+**Diagnostics: reduced model**
+
+The ROC curve shows the tradeoff between true positive rate and false positive rate across all cutoff values.
+
+Note: InformationValue:confusionMatrix -- wants predicts and obs to be numerical, in caret they should be factor!
+
+```{r}
+
+# collect predicted percentages
+
+predicted<-predict(reduced,reduced_df,type='response')
+
+# find optimal threshold to minimize misclassification
+
+(optimal<- optimalCutoff(train_df$target_flag, predicted, optimiseFor = "misclasserror"))  # 0.51
+
+# calculate training classification error with .51 threshold --> 0.2595
+
+misClassError(train_df$target_flag, predicted,  threshold = optimal)
+
+# convert predicted to 0, 1 values based on threshold
+
+predicts<-ifelse(predicted >= optimal, 1, 0)
+
+# subset actuals and predicts as numeric for confusion matrix
+
+actuals<-as.numeric(as.character(train_df$target_flag))
+
+(InformationValue::confusionMatrix(actuals, predicts, threshold = optimal)) 
+
+#Calculate related metrics
+
+auc<-AUROC(actuals, predicted) # -->.81
+
+InformationValue::sensitivity(actuals, predicts, threshold = optimal) # recall: true positive rate
+InformationValue::specificity(actuals, predicts, threshold = optimal) #false positive rate
+InformationValue::precision(actuals, predicts, threshold = optimal) # prop of predicted ones /prop total ones
+
+youdensIndex(actuals, predicts, threshold = optimal) # 0.48 accounts for both false-positive and false-negative rates
+
+Concordance(actuals, predicts) # predictive power  ---> .548
+
+ks_plot(actuals, predicts) #cum perc of ones captured by the model against that expected random
+
+ks_stat(actuals, predicts) #Kolmogorov-Smirnov statistic - maximum difference between the cumulative true positive and cumulative false positive rate
+
+# Construct ROC curve: note actuals, predicts, predicted as vectors)
+
+pred <- ROCR::prediction(predicted, actuals)
+perf <- ROCR::performance(pred, "tpr", "fpr")
+plot(perf, colorize = TRUE, main = "ROC curve for logistic regression on insurance data")
+
+#AUC curve
+
+plotROC(actual, predicted)
+
+```
+
+***Reduced Model: Assess  overdispersion***
+
+- we are within tolerable levels of dispersion
 
 ```{r}
 
 # evaluate using deviance and quasibinomial comparison
 
+deviance(reduced)/df.residual(reduced) # if considerably greater than one we should be concerned
 
-deviance(model1_aki)/df.residual(model1_aki) # if considerably greater than one we should be concerned
-
- 
 # dble check with two model fit
 
 quasi_model <-  glm(target_flag ~ .,family='quasibinomial', base_df) # note: using base_df
   
-pchisq(summary(quasi_model)$dispersion * model1_aki$df.residual,
- model1_aki$df.residual, lower = F)  
+pchisq(summary(quasi_model)$dispersion * reduced$df.residual,
+ reduced$df.residual, lower = F)  
 ```
+***Reduced: Check linearity of numerical vars vs. logit***
 
-***Model 1: Check linearity of numerical vars vs. logit***
-
-Linearity is questionable for yoj, home-kids, oldclaim
+Linearity is questionable for yoj, oldclaim
 
 Note clustering in oldclaim - consider turning into 3-level factor?
 
 ```{r}
 
-#incorporate logit into model1_df
+#create a dataframe for linearity analysis
 
+reduced_df<-train_df
 
-model1_df%<>%
-    mutate(logit = log(predicted/(1-predicted)))
+reduced_df$predicted<-predict(reduced,train_df,type='response') # add predicted
+
+reduced_df%<>%mutate(logit = log(predicted/(1-predicted))) # add logit
+
 
 # check linearity btwn numerical predictors and logit
 
-with(model1_df, scatter.smooth(travtime, logit, lpars = list(col = "red", lwd = 3, lty = 3)))
-with(model1_df, scatter.smooth(tif, logit, lpars = list(col = "red", lwd = 3, lty = 3)))
-with(model1_df, scatter.smooth(mvr_pts, logit, lpars = list(col = "red", lwd = 3, lty = 3)))
-with(model1_df, scatter.smooth(home_val, logit, lpars = list(col = "red", lwd = 3, lty = 3)))
-with(model1_df, scatter.smooth(yoj, logit, lpars = list(col = "red", lwd = 3, lty = 3)))
-with(model1_df, scatter.smooth(income, logit, lpars = list(col = "red", lwd = 3, lty = 3)))
-with(model1_df, scatter.smooth(homekids, logit, lpars = list(col = "red", lwd = 3, lty = 3)))
-with(model1_df, scatter.smooth(oldclaim, logit, lpars = list(col = "red", lwd = 3, lty = 3)))
-with(model1_df, scatter.smooth(clm_freq, logit, lpars = list(col = "red", lwd = 3, lty = 3)))
-with(model1_df, scatter.smooth(bluebook, logit, lpars = list(col = "red", lwd = 3, lty = 3)))
+with(reduced_df, scatter.smooth(travtime, logit, lpars = list(col = "red", lwd = 3, lty = 3)))
+with(reduced_df, scatter.smooth(tif, logit, lpars = list(col = "red", lwd = 3, lty = 3)))
+with(reduced_df, scatter.smooth(mvr_pts, logit, lpars = list(col = "red", lwd = 3, lty = 3)))
+with(reduced_df, scatter.smooth(income, logit, lpars = list(col = "red", lwd = 3, lty = 3)))
+with(reduced_df, scatter.smooth(homekids, logit, lpars = list(col = "red", lwd = 3, lty = 3)))
+with(reduced_df, scatter.smooth(oldclaim, logit, lpars = list(col = "red", lwd = 3, lty = 3)))
+with(reduced_df, scatter.smooth(clm_freq, logit, lpars = list(col = "red", lwd = 3, lty = 3)))
+with(reduced_df, scatter.smooth(bluebook, logit, lpars = list(col = "red", lwd = 3, lty = 3)))
 
 
 ```
 
-
-#Model 1 evaluate outliers and infuential obs
+#Reduced Model: evaluate outliers and infuential obs
 
 computes the standardized residuals (.std.resid) and the Cook’s distance (.cooksd) using the R function augment() [broom package]
 
@@ -582,33 +748,31 @@ Findings:
 
 Cooks distance indicates several standout obs (3722, 3592, 6501) but no influential points (id. D >1.0)
 
-Only 1 obs has std residual beyond 3 stdev: 5101
+There are no obs has std residual beyond 3 stdev: 5101
 
 
 ```{r}
 
-
-
 # Extract model results
 
-model1_aki$data <- augment(model1_aki) %>% 
+reduced$data <- augment(reduced) %>% 
   mutate(index = 1:n()) 
 
 #top 10 largest values
 
-model1_aki$data %>% top_n(10, .cooksd)
+reduced$data %>% top_n(10, .cooksd)
 
-plot(model1_aki, which = 4, id.n = 3)  # keep an eye on obs > 4/n 
+plot(reduced, which = 4, id.n = 3)  # keep an eye on obs > 4/n 
 
 #plot std residuals
 
-ggplot(model1_aki$data, aes(index, .std.resid)) + 
+ggplot(reduced$data, aes(index, .std.resid)) + 
   geom_point(aes(color = target_flag), alpha = .5) +
   theme_bw()
 
 #Filter potential influential data points with abs(.std.res) > 3
 
-model1_aki$data %>% 
+reduced$data %>% 
   filter(abs(.std.resid) > 3)
 ```
 ***Model 1 Assess multicollinearity***
@@ -617,18 +781,18 @@ Findings: no problems with collinearity
 
 ```{r}
 
-car::vif(model1_aki)
+car::vif(reduced)
 ```
 
-***Model 1 check std residuals for independence: resids vs. logit ***
+***Reduced Model: check std residuals for independence: resids vs. logit ***
 
-We see a definite pattern which suggests that the model may be misclassified
+We see some possible pattern (curvature) that might indicate misclassification but its unclear 
 
-```{r fig.height=10, fig.width=15}
+```{r }
 
-res_chk<-model1_df%>%mutate('residuals' = residuals(model1_aki), linpred = predict(model1_aki))
+resid_df<-train_df%>%mutate('residuals' = residuals(reduced), linpred = predict(reduced))
 
-bins<- group_by(res_chk, cut(linpred, breaks=unique(quantile(linpred, (1:100)/101))))
+bins<- group_by(resid_df, cut(linpred, breaks=unique(quantile(linpred, (1:100)/101))))
 
 diag<-summarize(bins, residuals=mean(residuals), linpred = mean(linpred))
 
@@ -636,170 +800,84 @@ plot(residuals~linpred, diag, xlab = "linear predictor")
 
 
 ```
-***Evaluate marginal plots to assess fit***
-
-Findings: we have issues with trav_time, bluebook, income,  claim_freq, mvr_pts, and yoj  
+**Transfomed Model**
 
 
-```{r fig.align='center', fig.height=10,fig.width=10, message = FALSE}
+reduced model = target_flag ~ kidsdriv + parent1 + mstatus + education + 
+    travtime + car_use + bluebook + tif + car_type + oldclaim + 
+    clm_freq + revoked + mvr_pts + urbanicity + income + age
 
-marginals<-mmps(model1_aki,main=NULL)
-
-```
-
-**Model 2 - Include predictor transformations**
-
-The following transformations result from some trial and error:
-
-sqrt: travtime, mvr_pts, yoj, clm_freq, income
-
-log: bluebook
-
-Note: AIC has gone down slightly relative to Model1
-
-travtime, clm_freq, mvr_pts still off
+We will log transform income, tif, bluebook, travtime oldclaim
 
 
 ```{r fig.align='center', fig.height=10,fig.width=10, message = FALSE}
 
-#create df to contain log transformed vars from model 
-
-model2_df<-model1_df%>%
-  select(!c(predicted, predicted_obs))%>%
-  mutate(sqrt_travtime = sqrt(travtime))%>%
-  mutate(sqrt_mvr_pts = sqrt(mvr_pts))%>% 
-  mutate(sqrt_yoj = sqrt(yoj))%>% 
-  mutate(sqrt_clm_freq = sqrt(clm_freq))%>% 
-  mutate(log_bluebook= log(bluebook))%>%
-  mutate(sqrt_income=sqrt(income))
-
-model2_df%<>%
-  select(!c(travtime, mvr_pts, yoj, clm_freq, bluebook, income))
 
 #build model with transformed vars
 
-model2 <- glm(target_flag~kidsdriv+homekids+parent1+mstatus+education+car_use+tif+car_type+oldclaim+revoked+urbanicity+home_val+job+sqrt_travtime+sqrt_mvr_pts+sqrt_yoj+sqrt_clm_freq+log_bluebook+sqrt_income,family='binomial',model2_df)
+trans <- glm( target_flag ~ kidsdriv + parent1 + mstatus + education + 
+    log(travtime) + car_use + log(bluebook) + sqrt(tif) + car_type + (oldclaim) + 
+    clm_freq + revoked + mvr_pts + urbanicity + sqrt(income) + age, family='binomial', train_df)
 
-model2_aki<-step(model2, trace=0) 
+trans<-step(trans, trace=0) 
 
-summary(model2_aki)
+summary(trans)
 
-#additional metrics
-
-
-model2_df$predicted<-predict(model2_aki, type='response')
-
-model2_df%<>%
-  mutate(predicted_obs = case_when(
-        predicted >= 0.5 ~ 1,
-        predicted < 0.5 ~ 0))
-
-model2_df$predicted_obs<-as.factor(model2_df$predicted_obs)
-model2_df$target_flag<-as.factor(model2_df$target_flag)
-
-#confusion matrix
-
-model2_cm<-confusionMatrix(data = model2_df$predicted_obs, reference = model2_df$target_flag)
-
-# interaction results
-
-model2_mtrics <- tibble(model = "transformation Model: base variables",
-                  predictors = length(coef(model2_aki))-1,
-                  precision = model2_cm$byClass[5],
-                  auc = auc(roc(response = as.numeric(model2_df$target_flag),
-                                predictor = as.numeric(model2_df$predicted)))[1],
-                  AIC = model2_aki$aic, BIC = BIC(model2_aki))
-
-#roc curve with AUC
-
-par(pty='s')
-
-proc<- roc(response=model2_df$target_flag, predictor=model2_df$predicted, plot=TRUE, legacy.axes=TRUE, auc.polygon=TRUE, col='blue', main = 'PROC ROC Curve', max.auc.polygon=TRUE, print.auc=TRUE)
-
-#review marginal plots
-
-model2_marg<-mmps(model2_aki,main=NULL)
-```
-
-**Model 2b - update transformatins to include polynomials for a check**
-
-reassess using polynomial for travtime, clm_freq, mvr_pts 
-
-Note: very slight improvement in AIC, improved marginals, much harder to interpret.
-
-```{r fig.align='center', fig.height=10,fig.width=10, message = FALSE}
-
-#create df to contain log transformed vars from model 
-
-model2b_df<-model1_df%>%
-  select(!c(predicted, predicted_obs))%>%
-  mutate(sqrt_yoj = sqrt(yoj))%>% 
-  mutate(log_bluebook= log(bluebook))%>%
-  mutate(sqrt_income=sqrt(income))
-
-model2b_df%<>%
-  select(!c( yoj, bluebook, income))
-
-#build model with transformed vars
-
-
-model2b <- glm(target_flag~kidsdriv+homekids+parent1+mstatus+education+car_use+tif+car_type+oldclaim+revoked+urbanicity+home_val+job+travtime+I(travtime^2)+mvr_pts+I(mvr_pts^2)+I(mvr_pts^3)+sqrt_yoj+clm_freq+I(clm_freq^2)+I(clm_freq^3)+log_bluebook+sqrt_income,family='binomial',model2b_df)
-
-model2b_aki<-step(model2b, trace=0) 
-
-summary(model2b_aki)
-
-#additional metrics
-
-
-model2b_df$predicted<-predict(model2b_aki, type='response')
-
-model2b_df%<>%
-  mutate(predicted_obs = case_when(
-        predicted >= 0.5 ~ 1,
-        predicted < 0.5 ~ 0))
-
-model2b_df$predicted_obs<-as.factor(model2b_df$predicted_obs)
-model2b_df$target_flag<-as.factor(model2b_df$target_flag)
-
-#confusion matrix
-
-(model2b_cm<-confusionMatrix(data = model2b_df$predicted_obs, reference = model2b_df$target_flag))
-
-# interaction results
-
-(model2b_metrics <- tibble(model = "transformation Model 2b: base variables",
-                  predictors = length(coef(model2b_aki))-1,
-                  precision = model2b_cm$byClass[5],
-                  auc = auc(roc(response = as.numeric(model2b_df$target_flag),
-                                predictor = as.numeric(model2b_df$predicted)))[1],
-                  AIC = model2b_aki$aic, BIC = BIC(model2b_aki)))
-
-#roc curve with AUC
-
-par(pty='s')
-
-proc<- roc(response=model2b_df$target_flag, predictor=model2b_df$predicted, plot=TRUE, legacy.axes=TRUE, auc.polygon=TRUE, col='blue', main = 'PROC ROC Curve', max.auc.polygon=TRUE, print.auc=TRUE)
-
-#review marginal plots
-
-model2b_marg<-mmps(model2b_aki,main=NULL)
-```
-
-***check std residuals on model2b***
-
-Still seeing autocorrelation
-
-
-```{r fig.height=10, fig.width=15}
-
-res2b_chk<-model2b_df%>%mutate('residuals' = residuals(model2b_aki), linpred = predict(model2b_aki))
-
-bins<- group_by(res2b_chk, cut(linpred, breaks=unique(quantile(linpred, (1:100)/101))))
-
-diag<-summarize(bins, residuals=mean(residuals), linpred = mean(linpred))
-
-plot(residuals~linpred, diag, xlab = "linear predictor")
 
 ```
+**Transformed Model: diagnostics **
+
+```{r}
+
+# collect predicted percentages
+
+trans_predicted<-predict(trans,train_df,type='response')
+
+# find optimal threshold to minimize misclassification
+
+(trans_optimal<- optimalCutoff(train_df$target_flag, trans_predicted, optimiseFor = "misclasserror"))  # 0.51
+
+# calculate training classification error with .51 threshold --> 0.2588
+
+misClassError(train_df$target_flag, trans_predicted,  threshold = trans_optimal)
+
+# convert predicted to 0, 1 values based on threshold
+
+trans_predicts<-ifelse(trans_predicted >= trans_optimal, 1, 0)
+
+# subset actuals and predicts as numeric for confusion matrix
+
+trans_actuals<-as.numeric(as.character(optimum_df$target_flag))
+
+(InformationValue::confusionMatrix(actuals, predicts, threshold = optimal)) 
+
+#Calculate related metrics
+
+auc<-AUROC(trans_actuals, trans_predicted) # -->.81
+InformationValue::sensitivity(actuals, predicts, threshold = optimal) # recall: true positive rate
+InformationValue::specificity(actuals, predicts, threshold = optimal) #false positive rate
+InformationValue::precision(actuals, predicts, threshold = optimal) # prop of predicted ones /prop total ones
+youdensIndex(actuals, predicts, threshold = optimal) # 0.48 accounts for both false-positive and false-negative rates
+
+Concordance(actuals, predicts) # predictive power  ---> .548
+
+ks_plot(actuals, predicts) #cum perc of ones captured by the model against that expected random
+
+ks_stat(actuals, predicts) #Kolmogorov-Smirnov statistic - maximum difference between the cumulative true positive and cumulative false positive rate
+
+# Construct ROC curve: note actuals, predicts, predicted as vectors)
+
+pred <- ROCR::prediction(predicted, actuals)
+perf <- ROCR::performance(pred, "tpr", "fpr")
+plot(perf, colorize = TRUE, main = "ROC curve for logistic regression on insurance data")
+
+#AUC curve
+
+plotROC(actual, predicted)
+```
+
+
+
+
+
 
